force-app/main/default/objects/Propulsion__c/Propulsion__c.object-meta.xml
<CustomObject>
    <label>Propulsion</label>
    <nameField>
        <label>Propulsion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propulsions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>