force-app/main/default/objects/Propulsion__c/fields/ComponentName__c.field-meta.xml
<CustomField>
    <fullName>ComponentName__c</fullName>
    <defaultValue>&quot;Propulsion&quot;</defaultValue>
    <label>Component Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>