force-app/main/default/objects/Propulsion__c/fields/Vehicle_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Inventory</label>
    <referenceTo>Vehicle_Inventory__c</referenceTo>
    <relationshipLabel>Propulsions</relationshipLabel>
    <relationshipName>Propulsions</relationshipName>
    <type>Lookup</type>
</CustomField>